// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render BegrepCollapse correctly 1`] = `
<div
  className="fdk-container-detail fdk-container-detail-begrep"
>
  <div
    className="fdk-ingress mb-0 fdk-container-begrep"
    onClick={[Function]}
    onKeyPress={[Function]}
    role="button"
    tabIndex={0}
  >
    <strong
      className="float-left"
    >
      enhet
      : 
    </strong>
    <i
      className="fa fa-chevron-down fdk-fa-right float-right"
    />
    <div>
      alt som er registrert med et organisasjonsnummer 
    </div>
    <Collapse
      appear={false}
      enter={true}
      exit={true}
      in={false}
      isOpen={true}
      mountOnEnter={false}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      tag="div"
      timeout={350}
      unmountOnExit={false}
    >
      <div>
        Alle hovedenheter, underenheter og organisasjonsledd som er identifisert med et organisasjonsnummer.
      </div>
    </Collapse>
  </div>
</div>
`;

exports[`should render BegrepCollapse correctly with no props 1`] = `
<div
  className="fdk-container-detail fdk-container-detail-begrep"
>
  <div
    className="fdk-ingress mb-0 fdk-container-begrep"
    onClick={[Function]}
    onKeyPress={[Function]}
    role="button"
    tabIndex={0}
  >
    <strong
      className="float-left"
    >
      : 
    </strong>
    <div />
    <Collapse
      appear={false}
      enter={true}
      exit={true}
      in={false}
      isOpen={false}
      mountOnEnter={false}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      tag="div"
      timeout={350}
      unmountOnExit={false}
    >
      <div />
    </Collapse>
  </div>
</div>
`;
